# Ceobe-Canteen-Serve

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  ErrorReference.md  README.md  Readme.md  build.rs  error_config.toml  example_error_config.toml  rustfmt.toml
authorize/: Cargo.toml
authorize/src/: axum_starter.rs  lib.rs  models.rs  validation.rs
authorize/src/error/: init_error.rs  mod.rs
authorize/src/validation/: configures.rs
codegen/sub-model/: Cargo.toml
codegen/sub-model/src/: lib.rs
codegen/sub-model/src/darling_models/: derive_input.rs  item_attr_input.rs  mod.rs  utils.rs  want.rs
codegen/sub-model/src/models/: field_filter.rs  mod.rs  sub_model.rs
dao/admin/: Cargo.toml
dao/admin/src/: lib.rs
database/mongo_connection/: Cargo.toml
database/mongo_connection/src/: config.rs  error.rs  impl_get_connect.rs  impl_initial.rs  lib.rs  mongo_connect.rs  static_vars.rs
database/mongo_connection/src/database/: builder.rs  manager.rs
database/mongo_connection/src/mongo_utils/: manager.rs  migrator.rs  mod.rs
database/redis_connection/: Cargo.toml
database/redis_connection/src/: config.rs  impl_get_connect.rs  impl_initial.rs  lib.rs  static_var.rs
database/redis_connection/tests/: test_connec.rs
database/sql_connection/: Cargo.toml
database/sql_connection/src/: config.rs  impl_get_connect.rs  impl_initial.rs  lib.rs  static_vars.rs
database/sql_connection/src/ext_traits/: active_or_set.rs  check_all_exist.rs  mod.rs  select_count.rs  select_only_model.rs
libs/bitmap-convert/: Cargo.toml
libs/bitmap-convert/src/: base70.rs  bitmap_i32.rs  bitmap_string.rs  error.rs  lib.rs  vec_i32.rs  vec_usize.rs
libs/cache-verfiy/: Cargo.toml
libs/cache-verfiy/src/: encode.rs  error.rs  lib.rs  traits.rs  verify.rs
libs/cached-db/: Cargo.toml
libs/cached-db/src/: lib.rs
libs/cached-db/src/db_io/: mod.rs
libs/cached-db/src/encoder/: decoder.rs  encoder.rs  mod.rs
libs/cached-db/src/utils/: and_then.rs  echo.rs  mod.rs  ready.rs
libs/ceobe-manager/: Cargo.toml
libs/ceobe-manager/src/: fut_utils.rs  lib.rs  updater_loader.rs  ws_sender.rs
libs/ceobe-manager/src/ceobo_actor/: cached.rs  mod.rs  updater.rs
libs/ceobe-manager/src/fut_utils/: done.rs  map.rs  mod.rs  stream_task.rs
libs/ceobe-manager/src/models/: mod.rs  share_str.rs  ws_msg.rs
libs/ceobe-manager/src/ws_actor/: continuation.rs  heartbeats.rs  income_handle.rs  json_loader.rs  mod.rs  retry_limit.rs
libs/checker/: Cargo.toml
libs/checker/examples/: example_code_gen.rs
libs/checker/src/: check_fut.rs  check_prehandle.rs  checker.rs  checker_impls.rs  codegen.rs  lib.rs  lite_args.rs  require_check.rs  sync_check.rs
libs/checker/src/prefabs/: date_time_format.rs  json_obj_check.rs  mod.rs  no_check.rs  no_remain_checker.rs  no_remainder_checker.rs  num_check.rs  option_checker.rs  post_checker.rs  str_len_checker.rs  url_checker.rs  version_checker.rs
libs/crypto_str/: Cargo.toml
libs/crypto_str/src/: crypto.rs  encoders.rs  lib.rs  serde.rs  trans.rs  wrap.rs
libs/crypto_str/src/encoders/: bcrypt.rs  none.rs
libs/db-entity/: Cargo.toml  each_mansion.rs  mod.rs  seaql_migrations.rs
libs/db-entity/src/: lib.rs
libs/db-entity/src/entity/: daily_mansion.rs  each_mansion.rs  inner_mansion.rs  mansion.rs  mansion_info.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  seaql_migrations.rs  user.rs  users.rs
libs/logger/: Cargo.toml
libs/logger/examples/: example1.rs
libs/logger/src/: error.rs  lib.rs  log_init.rs  logger.rs  logger_adapter.rs
libs/logger/src/config/: mod.rs
libs/logger/src/log_to/: file.rs  mod.rs  stdout.rs
libs/logger/src/logger_info/: location.rs  mod.rs  record_level.rs  time.rs
libs/modify-cache/: Cargo.toml
libs/modify-cache/src/: check_modify.rs  encode.rs  error.rs  headers.rs  lib.rs  time_format.rs  traits.rs
libs/modify-cache/src/cache_ctrl/: control.rs  mod.rs
libs/mongo-migrate-util/: Cargo.toml
libs/mongo-migrate-util/src/: collect_manage.rs  lib.rs  manager.rs  migration.rs  migrator.rs
libs/page_size/: Cargo.toml
libs/page_size/src/: lib.rs  request.rs
libs/page_size/src/database/: mod.rs
libs/page_size/src/request/: mod.rs
libs/page_size/src/response/: mod.rs
libs/qiniu-upload/: Cargo.toml
libs/qiniu-upload/examples/: server-uploader.rs
libs/qiniu-upload/src/: axum_starter.rs  error.rs  lib.rs
libs/qiniu-upload/src/config/: mod.rs
libs/qiniu-upload/src/uploader/: builder.rs  field.rs  file_upload.rs  mod.rs  payload.rs  upload_field.rs  upload_file.rs  upload_json.rs
libs/qiniu-upload/tests/: test_upload.rs
libs/resp-result/: Cargo.toml
libs/resp-result/src/config/: mod.rs  resp.rs  serde.rs
libs/resp-result/src/resp_error/: mod.rs
libs/resp-result/src/resp_result/: mod.rs  serde.rs  try_op.rs
libs/rresult/: Cargo.toml
libs/rresult/src/: into_rresult.rs  lib.rs  marco.rs  r_result.rs  rr_try.rs  serde.rs  status_code.rs  to_response.rs  trans.rs
libs/scheduler/: Cargo.toml
libs/scheduler/src/: lib.rs
libs/scheduler/src/data_structure/: mod.rs
libs/serve_utils/: Cargo.toml
libs/serve_utils/src/: controller_trait.rs  endpoint_type.rs  lib.rs  router_extra.rs  view_traits.rs
libs/serve_utils/src/view_traits/: const_field.rs  option_field.rs  skip_field.rs  value_field.rs
libs/status-err/: Cargo.toml  build.rs
libs/status-err/examples/: code_gen.rs
libs/status-err/src/: codegen.rs  lib.rs  status_code.rs
libs/status-err/src/impls/: mod.rs  mongodb.rs  (+2 more)
libs/time-utils/: Cargo.toml
libs/time-utils/src/: lib.rs
logic/bakery_logic/: Cargo.toml
logic/bakery_logic/src/: error.rs  lib.rs  view.rs
logic/ceobe_cookie_logic/: Cargo.toml
logic/ceobe_cookie_logic/src/: error.rs  lib.rs  view.rs
logic/ceobe_operation_logic/: Cargo.toml
logic/ceobe_operation_logic/src/: error.rs  lib.rs  view.rs
logic/ceobe_user_logic/: Cargo.toml
logic/ceobe_user_logic/src/: error.rs  implements.rs  lib.rs  utils.rs  view.rs
logic/fetcher_logic/: Cargo.toml
logic/fetcher_logic/src/: axum_starter.rs  error.rs  implement.rs  lib.rs  notifier.rs  utils.rs  view.rs
(+1491 files in other folders)
