[package]
name = "ceobe-canteen-serve"
version = "0.1.1"
edition = "2021"
default-run = "server"

[[bin]]
name = "server"
path = "./src/main.rs"

[profile.release]
lto = true
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["libs/*", "./models/*", "./migrate/*", "./database/*", "./macros/*"]

[workspace.dependencies]
ahash = {version = "0.8",features = ["serde"]}
async-trait = "0.1"
axum = { version = "0.5", features = ["multipart"] }
axum-prehandle = "0.1"
axum-starter = { version = "0.3", features = ["logger"] }
chrono = "0.4"
futures = "0.3"
log = "0.4.14"
mongodb = "2"
once_cell = "1"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls"
] }
resp-result = "0.4"
sea-orm = { version = "0.9", default-features = false, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sub-model = "0.2"
tap = "1.0.1"
thiserror = "1"
tokio = { version = "1", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "time",
    "signal"
] }
typed-builder = "0.10"
url = { version = "2", features = ["serde"] }
urlencoding = "2.1.0"

[features]
async_utils = []
database = []
default = []
migrator = []

[dependencies]
# Xss
ammonia = "3"
# async
async-trait = { workspace = true }
# axum
axum = { workspace = true, features = ["headers"] }
axum-starter = { workspace = true }
# db
bson = { version = "2.1.0", features = ["chrono-0_4"] }
ceobe-qiniu-upload = { version = "0.1.0", path = "libs/qiniu-upload" }
# else
chrono = { workspace = true, features = ["serde"] }
# config
figment = { version = "0.10", features = ["yaml", "json", "toml"] }
futures = { workspace = true }
hex = "0.4"
hmac = "0.12.1"
http = "0.2"
http-body = "0.4"
#encrypt
jwt = "0.16.0"
log = { workspace = true }
md-5 = "0.10"
once_cell = { workspace = true }
pin-project = "1"
rand = "0.8.5"
# request
reqwest = { workspace = true }
sha2 = "0.10.2"
tap = { workspace = true }
thiserror = { workspace = true }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.3", features = [
    "trace",
    "catch-panic",
    "set-header",
    "compression-full"
] }
typed-builder = { workspace = true }
# web
url = { workspace = true }
urlencoding = { workspace = true }
axum-macros = "0.2.3"

[dependencies.tokio]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.crypto_str]
features = ["serde", "bcrypt"]
path = "./libs/crypto_str"

[dependencies.range-limit]
path = "./libs/range-limit"

[dependencies.logger]
path = "./libs/logger"

[dependencies.status-err]
path = "./libs/status-err"

[dependencies.resp-result]
workspace = true

[dependencies.axum-prehandle]
workspace = true

[dependencies.checker]
path = "./libs/checker"

[dependencies.orm-migrate]
package = "migration"
path = "./migrate/sql-migration"

[dependencies.mongo-migration]
path = "./migrate/mongo-migration"

[dependencies.modify-cache]
path = "./libs/modify-cache"

[dependencies.database_traits]
path = "./database/database_traits"

[dependencies.page_size]
path = "./libs/page_size"

[dependencies.redis_connection]
path = "./database/redis_connection"
