[package]
name = "ceobe-canteen-serve"
version = "0.1.1"
edition = "2021"
default-run = "server"

[[bin]]
name = "server"
path = "./src/main.rs"

[profile.release]
lto = true
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "libs/*",
    "persistence/persistence",
    "./macros/*",
    "./middle-server/*",
    "./logic/*",
    "./global/*",
    "./service/*"
]

[workspace.dependencies]
ahash = "0.8"
async-trait = "0.1"
axum = { version = "0.6", features = ["multipart", "macros"] }
axum-core = "0.3"
axum-starter = { version = "0.6.2", features = ["logger"]}
chrono = "0.4"
ceobe-qiniu-upload = { version = "0.1.0", path = "libs/qiniu-manager" }
futures = "0.3"
tracing = { version = "0.1" }
mongodb = "2"
once_cell = "1"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls"
] }
resp-result = { version = "0.6", features = ["axum-full"] }
sea-orm = { version = "0.11", default-features = false, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros"
] }
sea-query = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sub-model = "0.2"
smallvec = "1.10.0"
smallstr = "0.3.0"
tap = "1.0.1"
thiserror = "1"
tokio = { version = "1", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "time",
    "signal"
] }
typed-builder = "0.11"
url = { version = "2", features = ["serde"] }
urlencoding = "2.1.0"
tracing-unwrap = { version = "0.10.0", features = ["log-location"] }
http = "0.2"
uuid = { version = "1.2.2", features = ["v4"] }
redis = { version = "0.22", features = [
    "tokio-comp",
    "ahash",
    "connection-manager"
] }
general-request-client = { path = "./middle-server/general-request-client" }
scheduler-notifier = { version = "0.1.0", path = "middle-server/scheduler-notifier" }
db-ops-prelude = { version = "0.1.0", path = "persistence/database/db-ops-prelude" }
bool_or = {version = "0.1.0", path = "./libs/bool_or"}
abstract_database = { version = "0.1.0", path = "persistence/database/abstract_database" }
ceobe-user = { version = "0.1.0", path = "persistence/dao/ceobe-user" }
ceobe-operate = { version = "0.1.0", path = "persistence/dao/ceobe-operate" }
fetcher = { version = "0.1.0", path = "persistence/dao/fetcher" }
bakery = { version = "0.1.0", path = "persistence/dao/bakery" }
admin = { version = "0.1.0", path = "persistence/dao/admin" }
ceobe-cookie = { version = "0.1.0", path = "persistence/dao/ceobe-cookie" }
page_size =  { version = "0.1.0", path = "./libs/page_size" }
mysql_func = { version = "0.1.0", path = "./libs/mysql_func" }
bitmap-convert = { version = "0.1.0", path = "./libs/bitmap-convert" }
bitmaps = "3.2.0"
qiniu-cdn-upload = { version = "0.1.0", path = "middle-server/qiniu-cdn-upload" }
mob-push-server = { version = "0.1.0", path = "middle-server/mob-push-server" }
qiniu_service = { version = "0.1.0", path = "service/qiniu_service" }
persistence = { version = "0.1.0", path = "persistence/persistence" }

[dependencies]
# Xss
ammonia = "3"
# async
async-trait = { workspace = true }
# axum
axum = { workspace = true, features = ["headers"] }
http = { workspace = true }
axum-starter = { workspace = true }
# db
bson = { version = "2.4.0", features = ["chrono-0_4", "uuid-1"] }
ceobe-qiniu-upload = { workspace = true }
# else
chrono = { workspace = true, features = ["serde"] }
# config
figment = { version = "0.10", features = ["yaml", "json", "toml", "env"] }
futures = { workspace = true }
hex = "0.4"
hmac = "0.12.1"
http-body = "0.4"
#encrypt
jwt = "0.16.0"
md-5 = "0.10"
once_cell = { workspace = true }
pin-project = "1"
rand = "0.8.5"
# request
reqwest = { workspace = true }
sha2 = "0.10.2"
tap = { workspace = true }
thiserror = { workspace = true }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.3", features = [
    "trace",
    "catch-panic",
    "set-header",
    "compression-full",
    "auth",
    "add-extension"
] }
typed-builder = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
axum-macros = "0.3"
tracing = { workspace = true }
dotenv = "0.15"
tracing-unwrap = { workspace = true }
uuid = { version = "1.2.2", features = ["v4"] }
request-clients = { version = "0.1.0", path = "middle-server/request-clients" }
general-request-client.workspace = true
scheduler-notifier.workspace = true
ceobe-operate.workspace = true
bool_or.workspace = true
ceobe-user.workspace = true
page_size.workspace = true
fetcher.workspace = true
bakery.workspace = true
admin.workspace = true
ceobe-cookie.workspace = true
qiniu-cdn-upload.workspace = true
mob-push-server.workspace = true
qq-channel-warning = { version = "0.1.0", path = "middle-server/qq-channel-warning" }
bitmap-convert.workspace = true
bitmaps.workspace = true
persistence = { workspace = true, features = ["prelude", "migrate"] }

[dependencies.tokio]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.crypto_str]
features = ["serde", "bcrypt"]
path = "./libs/crypto_str"

[dependencies.range-limit]
path = "./libs/range-limit"

[dependencies.logger]
path = "./libs/logger"

[dependencies.status-err]
path = "./libs/status-err"

[dependencies.resp-result]
workspace = true

[dependencies.checker]
path = "./libs/checker"

[dependencies.orm-migrate]
package = "migration"
path = "persistence/migrate/sql-migration"

[dependencies.mongo-migration]
path = "persistence/migrate/mongo-migration"

[dependencies.modify-cache]
path = "./libs/modify-cache"

[dependencies.database_traits]
path = "persistence/database/database_traits"

[dependencies.redis_connection]
path = "persistence/database/redis_connection"

[dependencies.fetcher_logic]
path = "./logic/fetcher_logic"

[dependencies.ceobe_user_logic]
path = "./logic/ceobe_user_logic"

[dependencies.ceobe_cookie_logic]
path = "./logic/ceobe_cookie_logic"

[dependencies.bakery_logic]
path = "./logic/bakery_logic"

