[package]
name = "ceobe-canteen-serve"
version = "0.1.1"
edition = "2021"
default-run = "server"

[[bin]]
name = "server"
path = "./src/main.rs"

[profile.release]
lto = true
strip = true
incremental = true
codegen-units = 16

[profile.dev.package."*"]
opt-level = 1
debug = 1

# [profile.release.package."*"]
# codegen-units = 128

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "libs/*",
    "persistence/persistence",
    "persistence/dao/*",
    "persistence/database/*",
    "persistence/migrate/*",
    "persistence/models/*",
    "./macros/*",
    "./middle-server/*",
    "./logic/*",
    "./global/*",
    "./service/*",
]

[workspace.dependencies]
ahash = "0.8"
async-trait = "0.1"
axum = { version = "0.7", features = [ "macros"] }
axum-core = "0.4"
axum-starter = { version = "0.10", features = ["logger"] }
chrono = "0.4"
ceobe-qiniu-upload = { version = "0.1.0", path = "libs/qiniu-manager" }
futures = "0.3"
tracing = { version = "0.1" }
mongodb = "2"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
axum-resp-result = { version = "0.7.1"}

sea-orm = { version = "0.12", default-features = false, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
] }
sea-query = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sub-model = "0.2"
smallvec = "1.10.0"
smallstr = "0.3.0"
tap = "1.0.1"
thiserror = "1"
tokio = { version = "1", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "time",
    "signal",
] }
typed-builder = "0.18"
url = { version = "2", features = ["serde"] }
urlencoding = "2.1.0"
tracing-unwrap = { version = "1", features = ["log-location"] }
http = "1"
uuid = { version = "1.2.2", features = ["v4"] }
redis = { version = "0.25", features = [
    "tokio-comp",
    "ahash",
    "connection-manager",
] }
general-request-client = { path = "./middle-server/general-request-client" }
scheduler-notifier = { version = "0.1.0", path = "middle-server/scheduler-notifier" }
db-ops-prelude = { version = "0.1.0", path = "persistence/database/db-ops-prelude" }
bool_or = {version = "0.1.0", path = "./libs/bool_or"}
abstract_database = { version = "0.1.0", path = "persistence/database/abstract_database" }
page_size =  { version = "0.1.0", path = "./libs/page_size" }
mysql_func = { version = "0.1.0", path = "./libs/mysql_func" }
bitmap-convert = { version = "0.1.0", path = "./libs/bitmap-convert" }
bitmaps = "3.2.0"
qiniu-cdn-upload = { version = "0.1.0", path = "middle-server/qiniu-cdn-upload" }
mob-push-server = { version = "0.1.0", path = "middle-server/mob-push-server" }
tencent-cloud-server = { version = "0.1.0", path = "middle-server/tencent-cloud-server" }
qiniu_service = { version = "0.1.0", path = "service/qiniu_service" }
persistence = { version = "0.1.0", path = "persistence/persistence" }
time-utils = { version = "0.1.0", path = "libs/time-utils" }
bson = { version = "2.4.0", features = ["chrono-0_4", "uuid-1"] }
secrecy = "0.8.0"
sha2 = "0.10.2"
hmac = "0.12.1"
hex = "0.4"
serde_qs = "0.13.0"
request-clients = { version = "0.1.0", path = "middle-server/request-clients" }
mime = "0.3.16"

[dependencies]

# async
async-trait = { workspace = true }
# axum
axum = { workspace = true }
http = { workspace = true }
axum-starter = { workspace = true }
# db
bson.workspace=true
ceobe-qiniu-upload = { workspace = true }
# else
chrono = { workspace = true, features = ["serde"] }
# config
figment = { version = "0.10", features = ["yaml", "json", "toml", "env"] }
futures = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
http-body = "1"
#encrypt
jwt = "0.16.0"
md-5 = "0.10"
once_cell = { workspace = true }
pin-project = "1"
rand = "0.8.5"
# request
reqwest = { workspace = true }
sha2 = { workspace = true }
tap = { workspace = true }
thiserror = { workspace = true }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["trace", "catch-panic", "set-header", "compression-full", "auth", "add-extension", "cors"] }
typed-builder = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
axum-macros = "0.4"
tracing = { workspace = true }
dotenv = "0.15"
tracing-unwrap = { workspace = true }
uuid = { version = "1.2.2", features = ["v4"] }
request-clients.workspace = true
general-request-client.workspace = true
scheduler-notifier.workspace = true
bool_or.workspace = true
page_size.workspace = true
qiniu-cdn-upload.workspace = true
mob-push-server.workspace = true
qq-channel-warning = { version = "0.1.0", path = "middle-server/qq-channel-warning" }
bitmap-convert.workspace = true
bitmaps.workspace = true
persistence = { workspace = true, features = ["prelude", "migrate"] }
tencent-cloud-server.workspace = true
semver = { version = "1.0.23", features = ["serde"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"


[dependencies.tokio]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.crypto_str]
features = ["serde", "bcrypt"]
path = "./libs/crypto_str"

[dependencies.range-limit]
path = "./libs/range-limit"

[dependencies.logger]
path = "./libs/logger"

[dependencies.status-err]
path = "./libs/status-err"

[dependencies.axum-resp-result]
workspace = true

[dependencies.checker]
path = "./libs/checker"



[dependencies.modify-cache]
path = "./libs/modify-cache"


[dependencies.fetcher_logic]
path = "./logic/fetcher_logic"

[dependencies.ceobe_user_logic]
path = "./logic/ceobe_user_logic"

[dependencies.ceobe_cookie_logic]
path = "./logic/ceobe_cookie_logic"

[dependencies.bakery_logic]
path = "./logic/bakery_logic"

[dependencies.ceobe_operation_logic]
path = "./logic/ceobe_operation_logic"
