[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db-ops-prelude.workspace = true
status-err = { version = "0.1.0", path = "../../libs/status-err" }
thiserror.workspace = true
tracing.workspace = true
abstract_database.workspace = true
tap.workspace = true
page_size.workspace = true