[package]
name = "mongo_connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
once_cell = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
mongodb = "2"
futures = "0.3"
actix-web = "4"
urlencoding = "2.1.0"
thiserror = "1"
async-trait = "0.1"
dashmap = "5"
typed-builder = "0.10"

[dependencies.status-err]
path = "../../libs/status-err"