[package]
name = "redis_connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
once_cell = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
database_traits = { path = "../database_traits" }
redis = { version = "0.22", features = [
    "tokio-comp",
    "ahash",
    "connection-manager"
] }
url = "2.3.1"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }
