[package]
name = "sql_connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
once_cell = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"

# data base crate
[dependencies.sea-orm]
version = "0.9"
default-features = false
features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"]
