[package]
name = "sql_connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
once_cell = { workspace = true }
serde = { workspace = true }
database_traits = { path = "../database_traits" }
sea-orm = { workspace = true }
tracing = { workspace = true }