[package]
name = "cache-verfiy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# serde
serde = "1"
bincode = "1"
# hash
sha3 = "0.10"
# time
chrono = "0.4"
# web support
http = "0.2"
axum = "0.5"
async-trait = "0.1"
resp-result = "0.3"
# utils
thiserror = "1"
