[package]
name = "ceobe-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["log"]
log = ["log_"]

[dependencies]
actix-web-actors = "4"
actix-codec = "0.5"
actix-rt = "2"
dashmap = "5"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
awc = "3"
actix-http = "3"
futures-util = "0"
bytes = "1"
pin-project = "1"

[dependencies.actix-web]
version = "4"

[dependencies.actix]
version = "0.13"

[dependencies.serde]
version = "1.0.133"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.log_]
package = "log"
version = "0.4"
optional = true
