[package]
name = "checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = "0.3"
pin-project = "1"
serde = "1"
chrono = "0.4"
url = "2"

[dependencies.range-limit]
path = "../range-limit"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
typed-builder = "0.10"
