[package]
name = "checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = { workspace = true }
pin-project = "1"
serde = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
check-obj-macro = { path = "../../macros/check-obj-macro" }
num-traits = "0.2"
axum-prehandle = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }

[dependencies.range-limit]
path = "../range-limit"

[dev-dependencies]
tokio = { workspace = true }
typed-builder = { workspace = true }
