[package]
name = "checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = { workspace = true }
pin-project = "1"
serde = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
check-obj-macro = { path = "../../macros/check-obj-macro" }
num-traits = "0.2"
async-trait = { workspace = true }
axum = { workspace = true }
axum-resp-result.workspace = true
serde_json = { workspace = true }
thiserror = { workspace = true }
smallvec = { workspace = true }
serde_with = "3.11.0"

[dependencies.range-limit]
path = "../range-limit"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
typed-builder = { workspace = true }
