[package]
name = "crypto_str"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["none", "trans", "bcrypt", "serde"]
# 鍐呯疆鐨勫姞瀵嗙畻娉?
bcrypt = ["bcrypt_"]
none = []
# serde 鏀寔
serde = ["serde_", "wrap"]
# 閽绘崲string鏀寔
trans = ["wrap"]
# 灏佽鏀寔
wrap = []

[dependencies]
bcrypt_ = { package = "bcrypt", version = "0.13", optional = true }

[dependencies.serde_]
package = "serde"
optional = true
version = "1"
