[package]
name = "crypto_str"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["none", "trans", "bcrypt", "serde"]
# йҚҗе‘Ҝз–ҶйҗЁеӢ«е§һзҖөе—ҷз•»еЁү?
bcrypt = ["bcrypt_"]
none = []
# serde йҸҖоҲӣеҜ”
serde = ["serde_", "wrap"]
# й–Ҫз»ҳеҙІstringйҸҖоҲӣеҜ”
trans = ["wrap"]
# зҒҸдҪҪо—ҠйҸҖоҲӣеҜ”
wrap = []

[dependencies]
bcrypt_ = { package = "bcrypt", version = "0.13", optional = true }

[dependencies.serde_]
package = "serde"
optional = true
version = "1"
