[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yansi = "0.5"
chrono = "0.4"
fern = { version = "0.6.1", features = ["chrono", "colored"] }

[dependencies.log]
version = "0.4"
features = ["std"]
