[package]
name = "modify-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# serde
serde = { workspace = true }
bincode = "1"
# hash
sha3 = "0.10"
# time
chrono = { workspace = true }
# web support
http = "0.2"
axum = { workspace = true, features = ["original-uri"] }
async-trait = { workspace = true }
resp-result = { workspace = true }
# utils
thiserror = { workspace = true }
base64 = "0.13"
#parse
nom = "7"
# status error
status-err = { path = "../../libs/status-err" }
#log
log = { workspace = true }
