[package]
name = "mongo-migrate-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
tap = "1"
dashmap = "5"
mongodb = "2"
typed-builder = "0.10"
serde = { version = "1" }
async-trait = "0.1"
