[package]
name = "page_size"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
checker= { path = "../../libs/checker" }
typed-builder = "0.10"
sea-orm = { version = "0.9", default-features = false, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono"
] }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
