[package]
name = "page_size"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { workspace = true }
checker = { path = "../../libs/checker" }
typed-builder = { workspace = true }
sea-orm = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
