[package]
name = "resp-result"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
full = ["log", "extra-code", "for-axum", "for-actix"]
log = ["logger"]
extra-code = []
for-axum = ["axum"]
for-actix = ["actix-web"]
for-rocket = []

[dependencies]
state = "0.5"
serde_json = "1"
http = "0.2"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.logger]
optional = true
package = "log"
version = "0.4"

[dependencies.axum]
optional = true
version = "^0.4"

[dependencies.actix-web]
optional = true
version = "^4"
