[package]
name = "rresult"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default=["logger","outcome"]
logger=["log"]
outcome=[]

[dependencies]
futures-util="0"
actix-web="4"
actix-http="3"
url = "2.2.2"

http="0.2"
log={version="0",optional=true}



[dependencies.serde]
version="1.0"



[dependencies.serde_json]
version="1.0"

[dependencies.status-err]
path="../status-err"