[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { workspace = true }
axum = { workspace = true }
axum-starter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
smallstr = { version = "0.3", features = ["serde", "std"] }
smallvec = { version = "1", features = ["serde", "write"] }
ahash = { workspace = true }
typed-builder = { workspace = true }
