[package]
edition = "2021"
name = "status-err"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix = "0.13"
actix-http = "3"
actix-web = "4"
http = "0.2"
jwt = "0.16.0"
log = {version = "0", optional = true}
url = "2"
bcrypt = "0.10"
mongodb = "2"
chrono = "0.4"

[dependencies.serde]
version = "1.0"

[dependencies.sea-orm]
default-features = false
features = [
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "macros", # "debug-print"
]
version = "0.6"

[dependencies.serde_json]
version = "1.0"

[dependencies.range-limit]
path = "../range-limit"

[dependencies.resp-result]
version = "0.1"
features = ["extra-code", "log"]

[dependencies.request-pretreat]
version="0.1.1"
