[package]
edition = "2021"
name = "status-err"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { workspace = true }
axum = { workspace = true }
http = "0.2"
jwt = "0.16.0"
url = { workspace = true }
bcrypt = "0.13"
mongodb = { workspace = true }
chrono = { workspace = true }
bincode = "1"
# marco
status-err-derive = { path = "../../macros/status-err-derive" }
thiserror = { workspace = true }

[dependencies.serde]
workspace = true

[dependencies.sea-orm]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.range-limit]
path = "../range-limit"

[dependencies.resp-result]
workspace = true
default-features = false
features = ["extra-error", "log"]

[dependencies.checker]
path = "../checker"
