[package]
edition = "2024"
name = "status-err"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
http = "1"
http_02 = {package = "http",version = "0.2"}
url = { workspace = true }
bcrypt = "0.13"
mongodb = { workspace = true }
chrono = { workspace = true }
redis = { workspace = true}
bincode = "1"
# marco
status-err-derive = { path = "../../macros/status-err-derive" }
thiserror = { workspace = true }
tonic = "0.9.2"
serde_qs.workspace = true
hmac.workspace = true
jsonwebtoken = "9.3.1"

[dependencies.serde]
workspace = true

[dependencies.sea-orm]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.range-limit]
path = "../range-limit"

[dependencies.axum-resp-result]
workspace = true
features = ["extra-error"]


[dependencies.checker]
path = "../checker"

[build-dependencies]
response-error-dev = { version = "0.1.0", path = "../response-error-dev" }
