[package]
name = "time-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
with-sea-orm = ["sea-orm"]
with-mongo=["mongodb"]

[dependencies]
chrono.workspace = true
mongodb = { workspace = true, optional = true, features = ["bson-chrono-0_4"] }
sea-orm = { workspace = true, features = ["with-chrono"] ,optional = true}
