[package]
name = "bakery_logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
status-err = { path = "../../libs/status-err" }
serde.workspace = true
serde_json.workspace = true
typed-builder.workspace = true
persistence = { workspace = true, features = ["model-bakery", "help-crates"] }
